css/main.css
.category {
    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
    padding: 0.5em;
}

.column-container {
    display: flex;
    flex-direction: column;
    gap: 0.5em;
}

.content {
    overflow: auto;
}

.controls {
    background-color: lightgrey;
    margin: 1em;
    padding: 1em;
}

.footer {
    display: flex;
    flex-direction: column;
    height: 50px;
    justify-content: flex-end;
    text-align: center;
    width: 100%;
}

.header {
    height: 50px;
    width: 100%;
}

.header-content {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 1em;
}

.information {
    background-color: lightgrey;
    margin: 1em;
    padding: 1em;
}

#output-head {
    white-space: pre-wrap;
}

.range {
    width: stretch;
}

.row-container {
    align-items: center;
    display: flex;
    flex-direction: row;
    gap: 0.5em;
    line-height: 2.3em;
}

.sticky {
    height: 50px;
    position: sticky;
    top: 0;
}

.sticky-content {
    padding: 1em;
}

